style.css
@import url('https://fonts.googleapis.com/css2?family=Shantell+Sans:wght@300&display=swap');

* {
    font-family: 'Shantell Sans', cursive;
}

body {
  margin-top: 0;
  padding: 0;
  background-color: #303030;
  color: #f2f2f2;
}

img {
    max-width: 100%
}

.mainpage {
    margin: 0px;
}

/* Color of links */
a {  
  color: lightskyblue;  
}

.topnav a.active {
  background-color: #04AA6D;
  color: white;
}

.topnav .icon {
  display: none;
}

@media screen and (max-width: 600px) {
  .topnav a:not(:first-child) {display: none;}
  .topnav a.icon {
    float: right;
    display: block;
  }
}

@media screen and (max-width: 600px) {
  .topnav.responsive {position: relative;}
  .topnav.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}

.main-image-howtoplay {
    width: 50%;
    height: 50%;
}

@media screen and (max-width: 600px) {
    .main-image-howtoplay {
        width: 90%;
        height: 90%;
    }
}

.main {
      margin: 5em auto;
}

.topnav li {
    text-decoration: none;
    display: inline-block;
    padding: 0px 20px;
}

.topnav a {
    transition: all 0.1s ease 0.1s;
    color: white;
    font-size: 175%;
}

.topnav a:hover {
    color: #00d9ff;
}

.sticky {
  z-index: 1;
  position: fixed;
  top: 0;
  width: 100%;
}

a.specialeffects:hover {
    background-color: #00d9ff; 
    text-decoration: underline;
}
p {
    font-size: 125%;
}
.slideshow-container{
    position: relative;
    margin:auto;
}
.slide{
    display: none;
}
/* Next & previous buttons */
.prev, .next {
    cursor: pointer;
    position: relative;
    top: 80%;
    width: auto;
    padding: 16px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    user-select: none;
}
/* Position the "next button" to the right */
.next {
    right: 0;
    border-radius: 3px 0 0 3px;
  }
/* Position the "prev button" to the right */
.prev {
    right: 0;
    border-radius: 3px 0 0 3px;
  }

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
    background-color: rgba(50,50,50,0.8);
}

/* Number text (1/3 etc) */
.numbertext {
    color: #f2f2f2;
    font-size: 12px;
    padding: 8px 12px;
    position: relative;
    top: 0;
}
  
/* The dots/bullets/indicators */
/*.dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}
  
.active, .dot:hover {
    background-color: #717171;
}*/

/* button styling*/
.button{
    border-color: white;
    background-color: #7777;
    font-size: 64px;
    color: white;
    text-align: center;
    text-decoration: underline;
}

.button:hover{
    color: #00d9ff;
}

/* Fading animation */
.fade {
    animation-name: fade;
    animation-duration: 1.5s;
}
@keyframes fade{
    from {opacity: .4;}
    to {opacity: 1;}
}

